# random

./: .gitignore  LICENSE.txt  Makefile  Makefile.in  README.md  README.txt  configure  configure.ac  darwin-arm.mk  darwin-x86.mk  freebsd.mk  linux.mk  random.1  random.c
mk/: bsd-x86.mk  darwin-arm.mk  darwin-legacy.mk  freebsd-x86.mk  openbsd-x86.mk
